syntax = "proto3";

package product;

option go_package="products/productpb";

message Product {
    string id = 1;
    string name = 2;
    double price = 3;
}

message CreateProductRequest {
    Product product = 1;
}

message CreateProductResponse{
    Product product = 1;
}

message GetProductRequest{
    string product_id = 1; 
}

message GetProductResponse{
    Product product = 1;
}

message UpdateProductRequest{
    Product product = 1; 
}

message UpdateProductResponse{
    Product product = 1;
}

message DeleteProductRequest{
    string product_id = 1; 
}

message DeleteProductResponse{
    string product_id = 1; 
}

message GetProductListRequest{
}

message GetProductListResponse{
    Product product = 1;
}


service ProductService {
    //CRUD
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct (GetProductRequest) returns (GetProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
    rpc GetProductList (GetProductListRequest) returns (stream GetProductListResponse);
}